增加browserSync，sass编译,js css合并压缩

--- a/gulp-other/sass/b/g_variables.scss
+++ b/gulp-other/sass/b/g_variables.scss
@@ -23,6 +23,8 @@ $base_path: $host;
 //}
 //----全局变量[颜色和边框]----
 // 背景颜色
+$app-global-color:#333;
+
 $app-background-color: #f2f2f2;
 
 $mysite-red: #FF3D00;
