--- a/gulp-other/lib/templates/layout.jade
+++ b/gulp-other/lib/templates/layout.jade
@@ -10,5 +10,8 @@ html
     //- link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     //- link(rel='stylesheet', href='/stylesheets/index.css')
     //- <!--[if lt IE 9]><script src="http://code.jquery.com/jquery-latest.js"><script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"><![endif]-->
+    link(rel='stylesheet', href='../css/g_base.min.css')
+    link(rel='stylesheet', href='../css/aa/base2.min.css') 
   body
      block content_main
+      
