--- a/gulp-other/sass/aa/base2.scss
+++ b/gulp-other/sass/aa/base2.scss
@@ -13,14 +13,9 @@ $base-font-size: 16px !default;
 }
 
 body{
-	background-color: #ccc;
-	font-size:rem(20px);
-	width: 100%;
-	
+  background-color: #f90;
+  
 }
-
-
-
 
 
 
