gulp-other使用了jade模板,版本号待添加。gulp-spa适合做活动单页

--- a/gulp-other/lib/templates/includes/footer.jade
+++ b/gulp-other/lib/templates/includes/footer.jade
@@ -1,6 +1,6 @@
-footer#footer.footer
-  div.footer-container.container
+div#ky_footer.ky-footer
+  div.footer-container
     p
       a(href='#') 欢迎加入QQ群交流提问
-  //- <script src="js/jquery-1.7.2.min.js">
-  //- <script src="js/bootstrap.min.js">
+block js
+  //- script(src="../js/plugin.js",type="text/javascript")
