--- a/gulp-other/lib/templates/detail.jade
+++ b/gulp-other/lib/templates/detail.jade
@@ -3,12 +3,10 @@ block title
     title 首页
 block links
     link(rel='stylesheet', href='../css/basePc.css')
-    link(rel='stylesheet', href='../css/index.css')
+    link(rel='stylesheet', href='../css/detail.css')
 block content_main
     include ./includes/nav
     .ky-main
-        h2 测试2
+        h2 我是
     include ./includes/footer
-    script(src="../js/index.js",type="text/javascript")
-
 
