--- a/gulp-other/lib/templates/includes/nav.jade
+++ b/gulp-other/lib/templates/includes/nav.jade
@@ -1,12 +1,13 @@
-#nav.nav.navbar-default.navbar-fixed-top
-    div.nav-container.container
+#ky-nav.ky-nav.ky-fixed
+    .ky-nav__container
         h1
             a(href='www.2345cn.com') 2345cn
-        nav.nav-top
-            - var navHref = ['/','/technology','live','ask']
-            mixin navList(value, cont)
-                each val in cont
-                    a.nav-top__item(href='/') #{val}
-            +navList(navHref,['首页', '技术', '生活', '问答'])
-        a(href="#" class="btn btn-success btn-ask" role="button") 发布话题
-    a#nav_login.glyphicon.glyphicon-off(href='/login')
+        ul.ky-nav__wrap
+         mixin lia(href, name)
+           li
+             a(class!=attributes.class, href=href)= name
+         +lia('./','首页')(class='current')
+         +lia('./other.html','其他')
+         +lia('./more.html','更多')
+
+
