change item3 del jade

--- a/gulp-item/item2/templates/includes/nav.jade
+++ b/gulp-item/item2/templates/includes/nav.jade
@@ -1,7 +1,7 @@
 #ky-nav.ky-nav.ky-fixed
     .ky-nav__container
         h1
-            a(href='www.2345cn.com') 2345cn
+            a(href='www.2345cn.com') name
         ul.ky-nav__wrap
          mixin lia(href, name)
            li
